[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/gui/pause.png" type="Texture" id=1]
[ext_resource path="res://assets/player/items/watch-broken.png" type="Texture" id=2]
[ext_resource path="res://function/templates/hud.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "item_pickup"
tracks/0/type = "value"
tracks/0/path = NodePath("watch:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( -40, -192 ), Vector2( -40, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "onPausePress"
length = 0.01
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("pause:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.501961, 0.501961, 0.501961, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "pickup_timeout"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("watch:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.25, 1 ),
"update": 0,
"values": [ Vector2( -40, 0 ), Vector2( -40, -192 ) ]
}

[node name="hud" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="animPlayer" type="AnimationPlayer" parent="."]
anims/item_pickup = SubResource( 1 )
anims/onPausePress = SubResource( 2 )
anims/pickup_timeout = SubResource( 3 )

[node name="pause" type="Button" parent="."]
visible = false
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
margin_left = 1232.0
margin_right = 1280.0
margin_bottom = 48.0
shortcut_in_tooltip = false
icon = ExtResource( 1 )
flat = true
icon_align = 1

[node name="watch" type="TextureRect" parent="."]
margin_left = -40.0
margin_top = -192.0
margin_right = 152.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[connection signal="button_down" from="pause" to="." method="_on_pause_button_down"]
[connection signal="button_up" from="pause" to="." method="_on_pause_button_up"]
